--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
 {
   "extends": "airbnb",
   "rules": {
-      "no-console": "off"
+      "no-console": "off",
+      "no-unneeded-ternary": "off"
     }
 }
