--- a/package.json
+++ b/package.json
@@ -11,18 +11,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-stormpath": "^3.1.5",
     "mongoose": "^4.6.4",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "request": "^2.75.0",
-    "webpack": "^1.13.2"
+    "request": "^2.75.0"
   },
   "devDependencies": {
     "eslint": "^3.8.0",
