--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-mocks": "^1.5.8",
     "bootstrap": "^3.3.7",
     "angular-bootstrap": "^2.2.0",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "angular-route": "^1.5.8"
   }
 }
