--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.4.1",
     "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3"
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1"
   }
 }
