--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.14.0",
     "express-stormpath": "^3.1.5",
     "mongoose": "^4.6.4",
-    "request": "^2.75.0"
+    "request": "^2.75.0",
+    "request-promise": "^4.1.1"
   },
   "devDependencies": {
     "eslint": "^3.8.0",
