--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "bootstrap": "^3.3.7",
     "angular-bootstrap": "^2.2.0",
     "angular-ui-router": "^0.3.1",
-    "angular-route": "^1.5.8"
+    "angular-route": "^1.5.8",
+    "angular-animate": "^1.5.8"
   }
 }
