--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack -d --watch",
     "build": "webpack -p",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "apm test"
   },
   "author": "",
   "license": "MIT",
@@ -14,9 +14,8 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-stormpath": "^3.1.5",
-    "mongoose": "^4.6.4",
-    "request": "^2.75.0",
-    "request-promise": "^4.1.1"
+    "got": "^6.5.0",
+    "mongoose": "^4.6.4"
   },
   "devDependencies": {
     "eslint": "^3.8.0",
@@ -25,6 +24,7 @@
     "eslint-plugin-angular": "^1.4.1",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.4.1"
+    "eslint-plugin-react": "^6.4.1",
+    "flow-bin": "^0.33.0"
   }
 }
