--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.14.0",
     "express-stormpath": "^3.1.5",
     "got": "^6.5.0",
-    "mongoose": "^4.6.4"
+    "mongoose": "^4.6.4",
+    "redisng": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^3.8.0",
@@ -25,6 +26,7 @@
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
-    "flow-bin": "^0.33.0"
+    "flow-bin": "^0.33.0",
+    "jasmine-fix": "^1.0.1"
   }
 }
